[project]
name = "langchain-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain==1.2.0",
    "langchain-openai==1.1.6",
    "langgraph-cli[inmem]==0.4.11",
    "aiosqlite>=0.19.0",
]

[tool.langgraph]
build_command = "langgraph build"
output_dir = "dist"
